src/objects/QPMS__NC_Type_History__c.object
<CustomObject>
    <description>This is a common object for all object  History(NC Type module)</description>
    <fields>
        <fullName>QPMS__ActionStatus__c</fullName>
        <defaultValue>&apos;Updated&apos;</defaultValue>
        <description>This field is for to display the action values like Created,Updated,Deleted in NC Type trail</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Attachment_Id__c</fullName>
        <description>This field is used to save attachment name</description>
        <label>Attachment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <description>This field is used to save the description of the filed</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__FieldApiName__c</fullName>
        <description>This field is used to save api name of the field</description>
        <label>FieldApiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__FieldName__c</fullName>
        <description>This field is used to save the filed name</description>
        <label>FieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Last_ModifiedBy__c</fullName>
        <description>To save the last modified by user</description>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last ModifiedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__NewValue__c</fullName>
        <description>This field is used to save new value in history object</description>
        <label>NewValue</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Non_Conformance_Type__c</fullName>
        <description>This field is to save the NC Type id</description>
        <label>NC Type</label>
        <referenceTo>QPMS__Non_Conformance_Type__c</referenceTo>
        <relationshipLabel>NC Type History</relationshipLabel>
        <relationshipName>NC_Type_Historys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QPMS__Object__c</fullName>
        <description>This field is used to save the object name</description>
        <label>Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__OldValue__c</fullName>
        <description>This field is used to save the old value</description>
        <label>OldValue</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Sub_Parent__c</fullName>
        <description>This field is used to save related object</description>
        <label>Sub Parent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Additional Details</fullName>
                </value>
                <value>
                    <fullName>Initiation</fullName>
                </value>
                <value>
                    <fullName>Adhoc_Task</fullName>
                    <label>Adhoc Task</label>
                </value>
                <value>
                    <fullName>Functional_Task</fullName>
                    <label>Functional Task</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__isCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is for to show the value is created/updated</description>
        <label>Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to  check record deleted or not</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <label>NC Type History</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Object__c</columns>
        <columns>QPMS__NewValue__c</columns>
        <columns>QPMS__OldValue__c</columns>
        <columns>QPMS__Sub_Parent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>NC-{00000000}</displayFormat>
        <label>NC Type History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NC Type History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>